tests/error/union_invalid.gw
#! [contains] Unions should only contain declarations
 union
{
  one; two;
};
